<?xml version="1.0"?>
<package>
  <name>urdf2graspit</name>
  <version>0.1.3</version>
  <description>The urdf2graspit package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="jennifer.e.buehler@gmail.com">Jennifer Buehler</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/urdf2graspit</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <!--<build_depend>collada_urdf</build_depend>-->
  <build_depend>eigen_conversions</build_depend>
  <build_depend>roslint</build_depend>
  <!--build_depend>ivcon</build_depend>
  <run_depend>ivcon</run_depend-->

  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>eigen_conversions</run_depend>

  <!-- System dependencies: -->
  <build_depend>libsoqt4-dev</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>libcoin80-dev</build_depend>
  <build_depend>git</build_depend>
  
  <run_depend>libsoqt4-dev</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>libcoin80-dev</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
